--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <h1>Записи в блоге</h1>
+{% if current_user.is_authenticated %}
+    <a href="news" class="btn btn-secondary">Добавить новость</a>
+{% endif %}
 {% for item in news%}
 <div class="col-md6 border rounded">
     <h2>{{item.title}}</h2>
@@ -10,6 +13,16 @@
     </div>
     <div>
         Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
+        {% if current_user.is_authenticated and current_user == item.user %}
+            <div>
+                <a href="/news/{{ item.id }}" class="btn btn-warning">
+                    Изменить
+                </a>
+                <a href="/news_delete/{{ item.id }}" class="btn btn-danger">
+                    Удалить
+                </a>
+            </div>
+        {% endif %}
     </div>
 </div>
 {% endfor %}
